vue/ingress/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-my
  namespace: devlopment
spec:
  ingressClassName: nginx
  rules:
  - host: api.com
    http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api
              port:
                number: 80
  - host: my.com
    http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pc
              port:
                number: 80
        - path: /pc
          pathType: Prefix
          backend:
            service:
              name: pc
              port:
                number: 80
        - path: /h5
          pathType: Prefix
          backend:
            service:
              name: h5
              port:
                number: 80
        - path: /newh5
          pathType: Prefix
          backend:
            service:
              name: newh5
              port:
                number: 80
